RESOLVED FIXED94694
Fix JSC build when DFG-JIT is disabled
https://bugs.webkit.org/show_bug.cgi?id=94694
Summary Fix JSC build when DFG-JIT is disabled
Gabor Ballabas
Reported 2012-08-22 05:23:39 PDT
When building JSC with disabled DFG-JIT the following error message occurs: Source/JavaScriptCore/bytecode/ResolveGlobalStatus.cpp:36:28: error: 'JSC::ResolveGlobalStatus JSC::computeForStructure(JSC::CodeBlock*, JSC::Structure*, JSC::Identifier&)' defined but not used
Attachments
Fix (1.17 KB, patch)
2012-08-22 05:27 PDT, Gabor Ballabas
no flags
Gabor Ballabas
Comment 1 2012-08-22 05:27:47 PDT
Csaba Osztrogonác
Comment 2 2012-08-22 05:31:23 PDT
Comment on attachment 159910 [details] Fix LGTM, r=me
WebKit Review Bot
Comment 3 2012-08-22 06:11:54 PDT
Comment on attachment 159910 [details] Fix Clearing flags on attachment: 159910 Committed r126294: <http://trac.webkit.org/changeset/126294>
WebKit Review Bot
Comment 4 2012-08-22 06:11:57 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.