Fix JSC build when DFG-JIT is disabled https://bugs.webkit.org/show_bug.cgi?id=94694

Patch by Gabor Ballabas <gaborb@inf.u-szeged.hu> on 2012-08-22
Reviewed by Csaba Osztrogonác.

Adding an appropriate guard for fixing the build.

* bytecode/ResolveGlobalStatus.cpp:
(JSC):

git-svn-id: svn://svn.chromium.org/blink/trunk@126294 bbb929c8-8fbe-4397-9dbb-9b2b20218538